--- a/lab_fingeso/demo/src/main/resources/application.properties
+++ b/lab_fingeso/demo/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/Fingeso
 spring.datasource.username=postgres
+# aqui ponen la contraseña que le pusieron al postgresql
 spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
