--- a/uiFront/package.json
+++ b/uiFront/package.json
@@ -10,6 +10,7 @@
     "serve": "vue-cli-service serve --port 5432"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^9.0.2",
     "vue": "^3.4.29",
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.1.0"
