--- a/uiFront/package.json
+++ b/uiFront/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@vuepic/vue-datepicker": "^9.0.2",
+    "axios": "^1.7.7",
     "vue": "^3.4.29",
+    "vue-router": "^4.4.3",
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.1.0"
   },
