--- a/uiFront/package.json
+++ b/uiFront/package.json
@@ -13,6 +13,7 @@
     "@vuepic/vue-datepicker": "^9.0.2",
     "axios": "^1.7.7",
     "vue": "^3.4.29",
+    "vue-cal": "^4.9.0",
     "vue-router": "^4.4.3",
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.1.0"
